--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
     }
 
     .content-accessories{
-        background-color: red;
+        background-color: purple;
         width: 100%;
         height: 100px;
     }
@@ -119,7 +119,7 @@
     }
 
     .content-accessories{
-        background-color: red;
+        background-color: purple;
         width: 50%;
         height: 100px;
     }
@@ -196,7 +196,7 @@
     }
 
     .content-accessories{
-        background-color: forestgreen;
+        background-color: purple;
         align-self: flex-start;
         width: 50%;
         height: 150px;
