--- a/styles.css
+++ b/styles.css
@@ -4,214 +4,82 @@
 }
 
 
+.page-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section {
+    width : 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-menu{
+    background-color: #721B65;
+    height: 30px;
+}
+
+.header{
+    background-color: #FFD868;
+}
 
 
-@media only screen and (max-width: 575px){
+.content-deals {
+    background-color: #f8615A;
+    height: 600px;
+}
 
-    body{
-        background-color: red;
+.content-shoes {
+    background-color: #FFA41B;
+}
+
+.content-teeshirt {
+    background-color: #9399FF;
+}
+
+.content-accessories {
+    background-color: #F1C6DE;
+}
+
+.preorder {
+    background-color: gold;
+}
+
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+    .content-shoes,
+    .content-teeshirt,
+    .content-accessories,
+    .preorder {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 961px) {
+    .page-container {
+        width: 961px;
+        margin: 0 auto;
+       
     }
 
-    .page-web{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
+    .content-shoes,
+    .content-accessories,
+    .content-teeshirt {
+        width: 33.3%;
     }
 
-    .nav-web{
-        background-color: coral;
-        width: 100%;
-        height: 100px;
-    }
-    
-    .header{
-        background-color: darkgreen;
-        width: 100%;
-        height: 100px;
+    .header {
+        height: 500px;
     }
 
     .content-deals{
-        background-color: darkmagenta;
-        width: 100%;
-        height: 100px;
+        order : 2;
     }
 
-    .content-shoes{
-        background-color: darkturquoise;
-        width: 100%;
-        height: 100px;
-    }
-
-    .content-teeshirt{
-        background-color: deeppink;
-        width: 100%;
-        height: 100px;
-    }
-
-    .content-accessories{
-        background-color: purple;
-        width: 100%;
-        height: 100px;
-    }
-
-    .preorder{
-        background-color: goldenrod;
-        width: 100%;
-        height: 100px;
-    }
+    
 
 }
 
 
-
-@media only screen and (min-width: 576px) and (max-width: 768px){
-
-    body{
-        background-color: blue;
-    }
-
-    .page-web{
-        display: flex;
-        flex-flow: column ;
-        width: 100%;
-    }
-
-    .nav-web{
-        background-color: coral;
-        width: 100%;
-        height: 150px;
-        
-    }
-    
-    .header{
-        background-color: darkgreen;
-        width: 100%;
-        height: 150px;
-
-    }
-
-    .miseenpage{
-        display: flex;
-        flex-flow: row wrap;
-    }
-
-    .content-deals{
-        background-color: darkmagenta;
-        width: 100%;
-        height: 150px;
-
-    }
-
-   
-    .content-shoes{
-        background-color: darkturquoise;
-        width: 50%;
-        height: 100px;
-        
-        
-    }
-
-    .content-teeshirt{
-        background-color: deeppink;
-        width: 50%;
-        height: 100px;
-        
-    }
-
-    .content-accessories{
-        background-color: purple;
-        width: 50%;
-        height: 100px;
-    }
-
-    .preorder{
-        background-color: goldenrod;
-        width: 50%;
-        height: 100px;
-    }
-  
-
-
-}
-
-
-@media only screen and (min-width: 769px){
-
-    body{
-        background-color: green;
-    }
-
-    .page-web{
-        display: flex;
-        flex-flow: column wrap;
-        width: 100%;
-    }
-
-    .nav-web{
-        background-color: coral;
-        width: 100%;
-        height: 150px;
-        
-    }
-    
-    .header{
-        background-color: darkgreen;
-        width: 100%;
-        height: 150px;
-
-    }
-
-    .miseenpage{
-        display: flex;
-        flex-flow: row wrap;
-    }
-
-
- 
-    .content-deals{
-        background-color: darkmagenta;
-        width: 100%;
-        height: 150px;
-        order: 2;
-
-    }
-
- 
-
-    .content-shoes{
-        background-color: darkturquoise;
-        align-self: flex-start;
-        width: 50%;
-        height: 150px;
-        
-        
-    }
-
-    .content-teeshirt{
-        background-color: deeppink;
-        align-self: flex-end;
-        width: 50%;
-        height: 150px;
-        
-    }
-
-    .content-accessories{
-        background-color: purple;
-        align-self: flex-start;
-        width: 50%;
-        height: 150px;
-    }
-
-    .preorder{
-        background-color: goldenrod;
-        align-self: flex-end;
-        width: 100%;
-        height: 150px;
-        order: 1;
-    }
-  
-
-    
-
-
-}
